--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-portfolio-project",
+  "name": "portfolio",
   "homepage": "https://mrashishraj.github.io/Portfolio",
   "version": "0.1.0",
   "private": true,
